# compass-bot

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  cookies.txt  docker-build.sh  mkdocs.yaml  pyproject.toml  requirements.txt  setup.sh  start.sh
.archive/: bot-flat.py  cogs.music.py  music.player-old.py  music.player.py  music.settings.py  music.songinfo.py  pyproject.toml.setuptools  start.sh-OLD
.generated/: settings.json
archive/: music-simple  twitchstuff.py
docs/: index.md
docs/Admin/: commands.md
docs/Commands/: admin.md  commands.md  compass_commands.md  destiny.md  gaming.md  general.md  index.md  moderation.md  music.md
docs/Configuration/: setup.md
docs/Developers/: database.md  database_utils.md  log_utils.md  utils.md
docs/General/: commands.md
docs/Moderation/: commands.md
docs/commands/: general.md
src/: cookies.txt  database.py  example-music-bot.py  helper.py  main-test.py  main.py
src/classes/: audiocontroller.py  customhelpcommands.py  playlist.py  settings.py  songinfo.py
src/classes/music/: audiocontroller.py  misc.py  playback.py  playlist.py  queue.py  settings.py  songinfo.py
src/cogs/: .music-bot-example  .template  admin.py  destiny.py  listeners.py  main.py  moderation.py  music  music.py  template  utils.py
src/compass/: bot.py  main.py
src/compass/cogs/: .template  admin.py  gaming.py  listeners.py  main.py  menu_commands.py  moderation.py  music.py  pinarchiver.py  utility.py
src/compass/components/: pagination.py
src/compass/config/: bot_config.py
src/compass/music/: dataclasses.py  music_config.py  music_utils.py  player.py  queue.py  yt_utils.py
src/compass/utils/: __init__.py  command_utils.py  custom_help_commands.py  db_utils.py  exceptions.py  log_utils.py  utils.py
src/compass_bot/: __init__.py  bot.py  main.py
src/compass_bot/cogs/: .template  BATS-MEMBERS.json  admin.py  destiny.py  gaming.py  listeners.py  main.py  menu_commands.py  moderation.py  music.py  pinarchiver.py  utility.py  utils.py
src/compass_bot/music/: dataclasses.py  music_config.py  music_utils.py  player.py  player.py.bak  queue.py  yt_utils.py
src/compass_bot/utils/: bot_config.py  command_utils.py  custom_help_commands.py  database.py  db_schema.json  db_utils.py  db_utils_xata.py  log_utils.py  utils.py
src/music/: music_config.py  music_utils.py  playback.py  playback_old.py  queue.py  settings.py  songinfo.py
src/utils/: bot_config.py  database.py  db_schema.json  db_utils.py  helper.py  log_utils.py  log_utils_colored.py  music_config.py  music_utils.py  utils.py
tests/: test_db.py  test_music_utils.py
