[tool.poetry]
name = "compass-bot"
version = "0.9.3"
description = "A Discord bot in Python"
authors = [
    "Glass Ships <contact@glass-ships.com>",
    "fatcatnine <fatcatnine@gmail.com>",
]
homepage = "https://gitlab.com/glass-ships/compass-bot"
documentation = "https://glass-ships.gitlab.io/compass-bot/"
repository = "https://gitlab.com/glass-ships/compass-bot"
packages = [{ include = "compass_bot", from = "src" }]


[tool.poetry.dependencies]
### Core 
python = ">=3.12, <4.0"
discord-py = { git = "https://github.com/Rapptz/discord.py.git" }
typer = "*"
loguru = "*"
psutil = "*"

### Database
# pymongo = { version="*", extras = ["srv"] }
xata = "*"

### For Commands
httpx = "*"
python-dateutil = "*"
pytz = "*"
GitPython = "*"
pillow = "*"

### For Music 
yt-dlp = "*"
spotipy = { git = "https://github.com/plamere/spotipy.git" }
beautifulsoup4 = "*"
pynacl = "*"
rich = "*"
ruff = "*"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = { version = "*", extras = ["python"] }
pytest = "^8.3.3"


[tool.poetry.scripts]
compass = "compass_bot.main:app"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "F541", # f-strings with no placeholders
]
# exclude = []


[build-system]
requires = ["poetry-core>=1.5.2"]
build-backend = "poetry.core.masonry.api"
